<resources>
    <string name="app_name">Note app</string>
    <string name="add_note_and_select_type_and_color">"you can add note to the list and select the type and  the color of note ."</string>
    <string name="add">Add</string>
    <string name="are_you_sure">are you sure about return ?</string>
    <string name="explain">there is text ,it well remove when you return from this  page</string>
    <string name="no_text">you can\'t add note without text , please add text first</string>
    <string name="add_to_item" translatable="false">animation from add to note item</string>
    <string name="transition_main_to_search" translatable="false">transition main to search</string>
    <string name="type">type</string>
    <string name="colors">color</string>
    <string name="search_your_notes">search your notes</string>
    <string name="just_text">just text</string>
    <string name="check_box">check box</string>
    <string name="image">images</string>
    <string name="make_a_copy">make a copy</string>
    <string name="change_color">change color</string>
    <string name="you_can_not_send">you can send just one notes</string>
    <string name="trash">trash</string>
    <string name="settings">settings</string>
    <string name="how_to_use_it">how to use it</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="display_options">Display options</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="key_them_list" translatable="false">key them list</string>
    <string name="Note">note</string>
    <string name="change">change</string>
    <string name="take_image">"take image first "</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Choose theme</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="language">language</string>

    <string-array name="choose_theme">
        <item>@string/light</item>
        <item>@string/dark</item>
        <item>@string/system_default</item>
    </string-array>

    <string-array name="choose_language">
        <item>@string/arabic</item>
        <item>@string/english</item>
        <item>@string/system_default</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="there_is_no_note">there is no note</string>
    <string name="there_is_no_result">there is no result</string>
    <string name="are_you_sure_about_delete">are you sure aboute delete ?</string>
    <string name="are_you_sure_about_delete_message">you can not find this note if you delete .</string>

</resources>