<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_settings_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.Settings"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/settings"
        app:titleTextColor="@color/color_text_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sA_tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/display_options"
        android:textColor="@color/second_color_settings_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar" />

    <LinearLayout
        android:id="@+id/ll_changeTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sA_tv_category">

        <TextView
            android:id="@+id/sA_tv_Theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_20sdp"/>

        <TextView
            android:id="@+id/sA_tv_valueThem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_default"
            android:layout_weight="1"
            android:textSize="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_changeLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_changeTheme">

        <TextView
            android:id="@+id/sA_tv_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_20sdp"/>

        <TextView
            android:id="@+id/sA_tv_valueLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_default"
            android:layout_weight="1"
            android:textSize="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:gravity="end"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>