<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        app:elevation="0dp"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleEnabled="false"
            app:statusBarScrim="@color/primaryDarkColor"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/background_border"
                android:transitionName="@string/transition_main_to_search"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="@dimen/_8sdp"
                android:elevation="0dp"
                app:contentInsetStartWithNavigation="0dp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:visibility="visible"
                app:title="@string/search_your_notes"
                app:titleTextColor="@color/color_text_icon"
                app:navigationIcon="@drawable/ic_baseline_dehaze_24"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_noNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/there_is_no_note"
        android:visibility="visible"
        android:gravity="center"
        android:textColor="@color/color_text_icon"
        android:textSize="@dimen/_16sdp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_3sdp"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/_16sdp"
        android:transitionName="transition_main_to_add"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="ContentDescription" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>