<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.SearchNotes">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="@color/backgroundBorder"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="68dp"
                    android:text="@string/type"
                    android:textColor="@color/color_text_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/colors"
                    android:textColor="@color/color_text_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/type_rg" />

                <RadioGroup
                    android:id="@+id/color_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8">

                    <RadioButton
                        android:id="@+id/colorOff_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:background="@drawable/radio_button_color_off"
                        android:layout_margin="@dimen/_4sdp"
                        android:checked="true"
                        app:useMaterialThemeColors="false" />

                    <RadioButton
                        android:id="@+id/redColor_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:background="@drawable/radio_button_red"
                        android:layout_margin="@dimen/_4sdp"
                        app:useMaterialThemeColors="false" />

                    <RadioButton
                        android:id="@+id/yellowColor_rb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:background="@drawable/radio_button_yellow"
                        android:layout_margin="@dimen/_4sdp"
                        app:useMaterialThemeColors="false" />

                    <RadioButton
                        android:id="@+id/blueColor_rb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@null"
                        android:background="@drawable/radio_button_blue"
                        android:layout_margin="@dimen/_4sdp"
                        android:gravity="center|right"
                        app:useMaterialThemeColors="false" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/type_rg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <RadioButton
                        android:id="@+id/justTaxt_rb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_11sdp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/radio_button_just_text"
                        android:drawablePadding="@dimen/_8sdp"
                        android:checked="true"
                        android:background="@null"
                        android:button="@null"
                        android:text="@string/just_text"
                        android:gravity="center"
                        app:useMaterialThemeColors="false" />

                    <RadioButton
                        android:id="@+id/checkbox_rb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_11sdp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center"
                        android:button="@null"
                        android:drawableTop="@drawable/radio_button_checkbox"
                        android:drawablePadding="@dimen/_8sdp"
                        android:text="@string/check_box"
                        app:useMaterialThemeColors="false" />

                    <RadioButton
                        android:id="@+id/photo_rb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_11sdp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center"
                        android:button="@null"
                        android:drawablePadding="@dimen/_8sdp"
                        android:drawableTop="@drawable/radio_button_image"
                        android:text="@string/image"
                        app:useMaterialThemeColors="false" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/backgroundBorder"
                app:layout_collapseMode="pin"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:backgroundTint="@color/backgroundBorder"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        app:defaultQueryHint="@string/search_your_notes"
                        app:queryBackground="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/backButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/backButton"
                        app:layout_constraintTop_toTopOf="@+id/backButton"
                        app:queryHint="@string/search_your_notes"
                        app:searchHintIcon="@null" />



                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>



        </com.google.android.material.appbar.CollapsingToolbarLayout>



    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/tv_noNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/there_is_no_result"
        android:visibility="visible"
        android:gravity="center"
        android:layout_marginTop="@dimen/_170sdp"
        android:textColor="@color/color_text_icon"
        android:textSize="@dimen/_16sdp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>