<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:transitionName="@string/add_to_item"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.MainActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_photoNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:adjustViewBounds="true"
                android:src="@drawable/ic_photo"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_textNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_6sdp"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/Note"
                android:paddingBottom="@dimen/_50sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_photoNote" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        app:strokeColor="#000"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_1sdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/add"
        android:textColor="@color/color_text_icon"
        android:textSize="@dimen/_16sdp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <CheckBox
        android:id="@+id/checkbox_note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        app:buttonTint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rg_typeNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="@+id/btn_add">

        <RadioButton
            android:id="@+id/rb_justNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio_button_note"
            android:checked="true"
            app:useMaterialThemeColors="false" />

        <RadioButton
            android:id="@+id/rb_checkNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio_button_check_box"
            android:checked="false"
            app:useMaterialThemeColors="false" />

        <RadioButton
            android:id="@+id/rb_photoNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio_button_photo"
            app:useMaterialThemeColors="false" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/colorRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rg_typeNote"
        app:layout_constraintTop_toTopOf="@+id/rg_typeNote">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio_button_red"
            android:checked="true"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio_button_yellow"
            android:checked="false"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:transitionName="transition_main_to_add"
            android:button="@drawable/radio_button_blue"
            app:useMaterialThemeColors="false" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>



